@@ -12,9 +12,9 @@ set (SOURCE_DIR "${PROJECT_SOURCE_DIR}/")
 set (BSON_MAJOR_VERSION 1)
 set (BSON_MINOR_VERSION 1)
 set (BSON_MICRO_VERSION 8)
-set (BSON_PRERELEASE_VERSION dev)
+set (BSON_PRERELEASE_VERSION )
 set (BSON_API_VERSION 1.0)
-set (BSON_VERSION 1.1.8-dev)
+set (BSON_VERSION 1.1.8)
 
 set (CPACK_RESOURCE_FILE_LICENSE "${SOURCE_DIR}/COPYING")
 set (CPACK_PACKAGE_VERSION_MAJOR ${BSON_MAJOR_VERSION})
