@@ -1,5 +1,10 @@
-Libbson-1.1.8-dev
-=================
+Libbson-1.1.8
+=============
+
+No change since 1.1.7; released to keep pace with libmongoc's version.
+
+-- A. Jesse Jiryu Davis
+
 
 Libbson-1.1.7
 =============
